--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -1,15 +1,5 @@
-.videocontainer {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-}
-
-.videocontainer video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+video {
+    border-radius: 1%;
 }
 
 .txtGeo {
