--- a/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
@@ -1,59 +1,38 @@
 <div class="sectionForm" id="ancreForm">
     <div class="row">
-        <div class="col-lg-1 hidden-xs hidden-sm hidden-md titreContact">
-            <h1>Contactez-nous</h1>
-        </div>
+        {#<div class="col-lg-1 hidden-xs hidden-sm hidden-md titreContact">#}
+            {#<h1>Contactez-nous</h1>#}
+        {#</div>#}
 
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 leftSide">
             <div class="row">
-                <div class="col-lg-offset-2 col-lg-6">
+
+                <!-- Map -->
+                <iframe class="map" width="625" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=1.8892514705657961%2C47.89133419118289%2C1.8968582153320315%2C47.8957799548847&amp;layer=mapnik&amp;marker=47.893557120745015%2C1.8930602073669434"></iframe><br/>
+                <small><a  class="legendecarte" target="_blank" href="http://www.openstreetmap.org/?mlat=47.89356&amp;mlon=1.89306#map=17/47.89356/1.89305">Ouvrir la carte dans un nouvel onglet</a></small><br>
+
+                <!-- Adresse MTL -->
+                <div class="col-lg-offset-1 col-lg-7">
                     <p class="adresse">
-                        m-Tourisme-Ludique<br/>
-                        Le Lab'O<br/>
-                        1 Avenue du champs de Mars<br/>
-                        Orléans
+                        m-Tourisme-Ludique est au Lab'O<br/>
+                        1 Avenue du champs de Mars, Orléans<br/>
                     </p>
                 </div>
+
+                <!-- Logo Lab'O  -->
                 <div class="col-lg-4">
                     <a href="http://www.le-lab-o.fr/" target="_blank"><img src="{{ asset ('image/logolabodetoure.png')}}" class="img-responsive logolabo" alt="logo Le Lab'O"></a>
                 </div>
+
             </div>
-            <iframe class="map" width="625" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=1.8892514705657961%2C47.89133419118289%2C1.8968582153320315%2C47.8957799548847&amp;layer=mapnik&amp;marker=47.893557120745015%2C1.8930602073669434"></iframe><br/>
-            <small><a  class="legendecarte" target="_blank" href="http://www.openstreetmap.org/?mlat=47.89356&amp;mlon=1.89306#map=17/47.89356/1.89305">Ouvrir la carte dans un nouvel onglet</a></small>
+
         </div>
+
         <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
 
             {% block contact %}
                 {{ include('MTLBundle:Default:email.html.twig') }}
             {% endblock %}
-
-
-
-            {#<form method="POST" class="form" action="email.html.twig">#}
-                {#<div class="form-group">#}
-                    {#<input type="Nom" class="form-control input-lg" id="Nom" placeholder="Nom *" aria-label="Votre nom"#}
-                           {#required><br/>#}
-                {#</div>#}
-                {#<div class="form-group">#}
-                    {#<input type="Prenom" class="form-control input-lg" id="Prenom" placeholder="Prénom"#}
-                           {#aria-label="Votre prénom" required><br/>#}
-                {#</div>#}
-                {#<div class="form-group">#}
-                    {#<input type="Entreprise" class="form-control input-lg" id="Entreprise" placeholder="Entreprise, Société, Organisme..." aria-label="Votre entreprise, société, organisme"><br/>#}
-                {#</div>#}
-                {#<div class="form-group">#}
-                    {#<input type="email" class="form-control input-lg" id="Email" placeholder="Email*"#}
-                           {#aria-label="Votre email" required><br/>#}
-                {#</div>#}
-                {#<div class="form-group">#}
-                    {#<textarea name="Message" class="form-control input-lg" placeholder="Message*" aria-label="Votre#}
-                    {#message" rows="10" required></textarea><br/>#}
-                {#</div>#}
-                {#<div class="form-group">#}
-                    {#<button type="submit" class="btn btn-warning catForm" class="lien_submit">Envoyer</button>#}
-                {#</div>#}
-            {#</form>#}
-
 
         </div>
     </div>
