lien vers liste actus

--- a/m-tourisme/web/css/stylesheetActu.css
+++ b/m-tourisme/web/css/stylesheetActu.css
@@ -81,7 +81,9 @@
 
 .goToList {
     color: #EE6616;
-    font-size: 100%;
+    font-size: 150%;
+    margin-left: 80%;
+    text-decoration: underline;
 }
 
 .goToList:hover {
