--- a/m-tourisme/src/MTLBundle/Resources/views/Default/headeractu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/headeractu.html.twig
@@ -1,14 +1,14 @@
 <header>
     <a href="index" class="lien_header">
-        <div class="backgroundHeader" id="ancreHome" >
+        <div class="backgroundHeader" >
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-hidden col-xs-offset-0
                                 col-sm-4 col-sm-offset-0
                                 col-md-3 col-md-offset-0
                                 col-lg-3 col-lg-offset-1 logo_header">
-                            <img class="img-responsive logoHeader" src="{{ asset ('image/logoMblanc.png')}}" alt="Logo
-                        mTourisme-Ludique">
+                        <img class="img-responsive logoHeader" src="{{ asset ('image/logoMblanc.png')}}" alt="Logo
+                        mTourimse-Ludique">
                     </div>
 
                     <div class="col-xs-12 col-xs-offset-1
