--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -14,11 +14,36 @@
 
 
 {% block body %}
-    {% block header %}
-        {{  include('MTLBundle:Default:header.html.twig') }}
-    {% endblock %}
+    {#{% block header %}
+        {{  include('MTLBundle:Default:headeractu.html.twig') }}
+    {% endblock %}#}
 
     {% block listeActu %}
+        <header>
+            <a href="index" class="lien_header">
+                <div class="backgroundHeader" >
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-xs-hidden col-xs-offset-0
+                                col-sm-4 col-sm-offset-0
+                                col-md-3 col-md-offset-0
+                                col-lg-3 col-lg-offset-1 logo_header">
+                                <img class="img-responsive logoHeader" src="{{ asset ('image/logoMblanc.png')}}" alt="Logo
+                        mTourimse-Ludique">
+                            </div>
+
+                            <div class="col-xs-12 col-xs-offset-1
+                                col-sm-7 col-sm-offset-1
+                                col-md-9 col-md-offset-0
+                                col-lg-8 col-lg-offset-0 logo_text">
+                                <h1 class="marque">Tourisme Ludique</h1><br/>
+                                <p class="slogan">CREATION D'USAGES MOBILES LUDIQUES APPLIQUES AU TOURISME ET A LA CULTURE</p><br/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </header>
         <div class="sectionListeActu">
             <div class="container">
                 <div class="row">
