--- a/m-tourisme/web/css/styleIndex.css
+++ b/m-tourisme/web/css/styleIndex.css
@@ -3,6 +3,9 @@ h1 {
     font-family: 'santorregular', 'DIN-Bold', 'Courgette';
 }
 
+h2 {
+    font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+}
 .img {
     width: 30%;
 }
