--- a/m-tourisme/web/css/stylesheet_notre_philosophie.css
+++ b/m-tourisme/web/css/stylesheet_notre_philosophie.css
@@ -3,7 +3,8 @@
     font-size: 300%;
     margin-bottom: 3%;
     color: #EE6616;
-
+    font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+    font-weight: bold;
 }
 
 .notre_philo {
