--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
@@ -2,10 +2,40 @@
     <div class="container-fluid footer">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <a class="lienFooter" href="#ancre">Crédits</a><br/>
-                <!-- Button modal -->
+                <!-- Button modal Crédit -->
+                <a class="lienFooter" href="#myModal1" data-toggle="modal" data-target="#myModal1">Crédits</a><br/>
+                <!-- Modal Crédit-->
+                <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h1 class="modal-title" id="myModalLabel">Crédits</h1>
+                            </div>
+                            <div class="modal-body ">
+                                <h2 class="titreMention">Photographie</h2>
+                                <p class="pMention">
+                                    Toutes les photos utilisés sur le site sont la propriété exclusive de M. Sylvain Lambert
+                                </p>
+                                <hr class="separe">
+
+                                <h2 class="titreMention">Icônes et pictogrammes</h2>
+                                <p class="pMention">
+                                    Les icônes et pictogrammes utilisés sur le site sont libres de droits et
+                                    issus du site <a href="www.icons8.com">www.icons8.com</a>
+                                </p>
+                                <hr class="separe">
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default pMentionblanc" data-dismiss="modal">Fermer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Button modal Mentions légales-->
                 <a class="lienFooter" href="#myModal" data-toggle="modal" data-target="#myModal">Mentions légales</a>
-                <!-- Modal -->
+                <!-- Modal Mentions Légales-->
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
