--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -33,10 +33,12 @@ video {
 
 .titreGeo {
     text-align: center;
-    margin-bottom: 5%;
+    font-size: 300%;
+    margin-bottom: 3%;
+    margin-top: 3%;
     color: #EE6616;
-    font-family: 'DIN';
-    font-size: 400%
+    font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+    font-weight: bold;
 }
 
 .titreProduit {
