--- a/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
@@ -3,7 +3,7 @@
         <div class="row">
             <h2 class="titreMetier">Prendre plaisir à s'enrichir</h2>
             <p class="txt-presentation">
-                m-Tourisme Ludique édite des solutions numériques dédiées à la <strong class="accrocheMetier">valorisation ludique et pédagogique de patrimoines matériels et immatériels.</strong>
+                m-Tourisme Ludique édite des <strong class="noBold">solutions numériques</strong> dédiées à la <strong class="accrocheMetier">valorisation ludique et pédagogique de patrimoines matériels et immatériels.</strong>
             </p>
         </div>
 
