--- a/m-tourisme/app/Resources/views/baseAdmin.html.twig
+++ b/m-tourisme/app/Resources/views/baseAdmin.html.twig
@@ -8,7 +8,7 @@
 appliqués au tourisme et à la culture - Orléans Loiret (45)">
     <meta name="keywords" content="application, mobile, ludique, tourisme, culture, edition, patrimoine, motif, ornement,
 architecture, geomotifs, details, geocaching">
-    <meta name="robots" content="no-index, no-follow">
+    <meta name="robots" content="noindex, nofollow">
 
     <!-- FavIcon -->
     <link rel="icon" type="image/png" href="{{ asset('image/favicon.png')}}" />
