--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -28,10 +28,9 @@
             </p>
             <p class="txtGeo">
                 <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe de valorisation du
-                <strong class="motAccroche">patrimoine</strong> par les <strong class="motAccroche">détails</strong>
+                patrimoine par les <strong class="motAccroche">détails</strong>
                 (<strong class="motAccroche">ornementation, architecture</strong>...).
-                Ils sont omniprésents, on ne les voit pas, mais sans eux notre <strong class="motAccroche">patrimoine</strong>
-                aurait moins de saveurs.
+                Ils sont omniprésents, on ne les voit pas, mais sans eux notre patrimoine aurait moins de saveurs.
             </p>
             <p class="txtGeo">
                 Vous disposez d'un <strong class="motAccroche">patrimoine</strong> éligible et souhaitez renouveler l'intérêt pour votre
@@ -68,12 +67,12 @@
     </div>
     <div class="row citation">
         <div class="col-lg-12">
-            <p class="citationLeft">"GéoMOTifs, une chasse aux décors ludique touristique et culturelle 100% originale"</p>
+            <p class="citationLeft">"GéoMOTifs, une chasse aux décors ludique <strong class="motAccroche">touristique</strong> et <strong class="motAccroche">culturelle</strong> 100% originale"</p>
         </div>
     </div>
     <div class="row citation">
         <div class="col-lg-12">
-            <p class="citationRight">"Le Géocaching des mots et des formes"</p>
+            <p class="citationRight">"Le <strong class="motAccroche">Géocaching</strong> des mots et des formes"</p>
         </div>
     </div>
     <hr class="separe">
