update link to linkedIn in mention legales

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
@@ -72,11 +72,11 @@
                                 <h2 class="titreMention">Réalisation du site web</h2>
                                 <p class="pMention">
                                     <span class="ecole">Wild Code school</span><br/>
-                                    Louise Munier<br/>
-                                    Guillaume Landreau<br/>
-                                    Mathieu Mercier<br/><br/>
+                                    <a class="linkML" href="https://fr.linkedin.com/in/louise-munier-6057b057">Louise Munier</a><br/>
+                                    <a class="linkML" href="https://fr.linkedin.com/in/guillaume-landreau-96520978">Guillaume Landreau</a><br/>
+                                    <a class="linkML" href="https://fr.linkedin.com/in/mathieu-mercier">Mathieu Mercier</a><br/><br/>
                                     contact@wildcodeschool.fr<br/>
-                                    <a href="http://www.wildcodeschool.fr/">www.wildcodeschool.fr</a>
+                                    <a class="linkML" href="http://www.wildcodeschool.fr/">www.wildcodeschool.fr</a>
                                 </p>
                             </div>
                             <div class="modal-footer">
