--- a/m-tourisme/web/css/stylesheetHeader.css
+++ b/m-tourisme/web/css/stylesheetHeader.css
@@ -8,14 +8,10 @@ Header {
     text-align: center;
     color: white;
 }
+
+/* lien dirigeant vers la page d'accueil */
 .lien_header {
     text-decoration: none;
-}
-
-Header h1 {
-        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
-    font-weight: bold;
-    color: white;
 }
 
 Header p {
@@ -23,19 +19,21 @@ Header p {
     color: white;
 }
 
+/***** balise du logo MTL *****/
 .logo_header {
-    margin-top:7% ;
-    margin-bottom: 5%;
+    margin-top:6% ;
 }
 
 .logo_header img  {
-    width: 70%;
-    height: 70%;
-    right: -30%;
-    top: -30px;
+    width: 60%;
+    height: 60%;
+    right: -7%;
+    top: 3.2em;
     position: relative;
 }
+/***** fin balise logo MT *****/
 
+/***** balise textes logo MTL *****/
 .logo_text {
     padding-top: 10%;
     padding-bottom: 7%;
@@ -44,70 +42,36 @@ Header p {
 
 .logo_text p {
     letter-spacing: 8px;
-    line-height: 1.2;
+    line-height: 1.4;
     font-size: 220%;
 }
 
-
-@media screen and (max-width:1580px ){
-    Header h1 {
-        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
-        font-weight: bold;
-    }
-
-    Header p {
-        font-family: 'DIN-Light', 'Courgette';
-    }
-
-    .logo_header {
-        margin-top:7% ;
-        margin-bottom: 5%;
-    }
-
-    .logo_header img  {
-        width: 70%;
-        height: 70%;
-        right: -20px;
-        top: -20px;
-        position: relative;
-    }
-
-    .logo_text {
-        padding-top: 10%;
-        padding-bottom: 7%;
-        left: -10%;
-    }
-
-    .logo_text p {
-        letter-spacing: 8px;
-        line-height: 0.5;
-        font-size: 250%;
-    }
+/* Titre H1 "Tourisme Ludique" */
+.marque {
+    font-size: 800%;
+    font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+    font-weight: bold;
+    color: white;
 }
+/***** fin balise textes logo MTL *****/
 
-@media screen and (max-width:1285px ){
-    Header h1 {
-        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
-        font-weight: bold;
-    }
 
-    Header p {
-        font-family: 'DIN-Light', 'Courgette';
-    }
-
+@media screen and (max-width:1750px ) {
+    /***** balise du logo MTL *****/
     .logo_header {
-        margin-top:7% ;
-        margin-bottom: 5%;
+        margin-top:6% ;
     }
 
     .logo_header img  {
-        width: 70%;
-        height: 70%;
-        right: 15%;
-        top : 5%;
+        width: 60%;
+        height: 60%;
+        right: -7%;
+        top: 3.2em;
         position: relative;
     }
+    /***** fin balise logo MT *****/
 
+    /***** balise textes logo MTL *****/
     .logo_text {
         padding-top: 10%;
         padding-bottom: 7%;
@@ -116,170 +80,105 @@ Header p {
 
     .logo_text p {
         letter-spacing: 8px;
-        line-height: 1.5;
+        line-height: 1.4;
         font-size: 200%;
     }
-}
 
-@media screen and (max-width:990px ) {
-    Header h1 {
+    /* Titre H1 "Tourisme Ludique" */
+    .marque {
+        font-size: 700%;
         font-family: 'santorregular', 'DIN-Bold', 'Courgette';
         font-weight: bold;
+        color: white;
     }
+    /***** fin balise textes logo MTL *****/
+}
 
-    Header p {
-        font-family: 'DIN-Light', 'Courgette';
-    }
-
+@media screen and (max-width:1450px ) {
+    /***** balise du logo MTL *****/
     .logo_header {
-        margin-top:7% ;
-        margin-bottom: 5%;
+        margin-top:6% ;
     }
 
     .logo_header img  {
-        width: 100%;
-        height: 100%;
-        right: -45%;
-        top: ;
+        width: 60%;
+        height: 60%;
+        right: -7%;
+        top: 3.2em;
         position: relative;
     }
+    /***** fin balise logo MT *****/
 
+    /***** balise textes logo MTL *****/
     .logo_text {
         padding-top: 10%;
         padding-bottom: 7%;
         left: -10%;
     }
 
-
     .logo_text p {
-        letter-spacing: 6px;
-        line-height: 1.5;
-        font-size: 175%;
+        letter-spacing: 8px;
+        line-height: 1.4;
+        font-size: 180%;
     }
-}
 
-@media screen and (max-width:800px ) {
-    Header h1 {
+    /* Titre H1 "Tourisme Ludique" */
+    .marque {
+        font-size: 600%;
         font-family: 'santorregular', 'DIN-Bold', 'Courgette';
         font-weight: bold;
+        color: white;
     }
+    /***** fin balise textes logo MTL *****/
+}
 
-    Header p {
-        font-family: 'DIN-Light', 'Courgette';
-    }
-
+@media screen and (max-width:1250px ) {
+    /***** balise du logo MTL *****/
     .logo_header {
-        margin-top:7% ;
-        margin-bottom: 5%;
-        height: 200%;
+        margin-top:6% ;
     }
 
     .logo_header img  {
-        width: 200%;
-        height: 200%;
-        right: -30% ;
-        top: -5% ;
+        width: 60%;
+        height: 60%;
+        right: -7%;
+        top: 3.2em;
         position: relative;
     }
+    /***** fin balise logo MT *****/
 
+    /***** balise textes logo MTL *****/
     .logo_text {
         padding-top: 10%;
         padding-bottom: 7%;
         left: -10%;
     }
 
-
     .logo_text p {
-        letter-spacing: 6px;
-        line-height: 1.5;
-        font-size: 135%;
-    }
-}
-
-@media screen and (max-width:768px ) {
-    Header h1 {
-        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
-        font-weight: bold;
-    }
-
-    Header p {
-        font-family: 'DIN-Light', 'Courgette';
-    }
-
-    .logo_header {
-        margin-top:7% ;
-        margin-bottom: 5%;
-        height: 200%;
-    }
-
-    .logo_header img  {
-        width: 45%;
-        height: 45%;
-        right: 25px ;
-        top: -5% ;
-        position: relative;
-    }
-
-    .logo_text {
-        padding-top: 10%;
-        padding-bottom: 7%;
-        left: -10%;
-        top: -50px;
-    }
-
-
-    .logo_text p {
-        letter-spacing: 6px;
-        line-height: 1.5;
-        font-size: 1.8em;
-    }
-}
-
-@media screen and (max-width:360px ) {
-    Header h1 {
-        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
-        font-weight: bold;
-    }
-
-    Header p {
-        font-family: 'DIN-Light', 'Courgette';
-    }
-
-    .logo_header {
-        margin-top:7% ;
-        margin-bottom: 5%;
-        height: 200%;
-    }
-
-    .logo_header img  {
-        width: 50%;
-        height: 50%;;
-        top: -5% ;
-        right: 0%;
-        position: relative;
-    }
-
-    .logo_text {
-        padding-top: 10%;
-        padding-bottom: 7%;
-    }
-
-
-    .logo_text p {
-        letter-spacing: 6px;
+        letter-spacing: 8px;
         line-height: 1.2;
-        font-size: 130%;
+        font-size: 160%;
     }
+
+    /* Titre H1 "Tourisme Ludique" */
+    .marque {
+        font-size: 500%;
+        font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+        font-weight: bold;
+        color: white;
+    }
+    /***** fin balise textes logo MTL *****/
 }
+
 
 .logoHeader {
-    width: 12%;
-    height: 12%;
-    margin: auto;
+width: 12%;
+height: 12%;
+margin: auto;
 }
 
 .marque {
-    font-size: 600%;
+    font-size: ;
 }
 
 .slogan {
