--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -33,6 +33,7 @@
                     {{ form_row(form.contenu, { 'attr': {'class': 'summernote'}}) }}<br/>
                     {{ form_row(form.date) }}<br/>
                     {{ form_row(form.image, { 'attr': {'class': ' btn btn-warning block-center'}}) }}<br/>
+                {{ form_end(form) }}
         </div>
 
             <br/>
