--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -54,8 +54,7 @@
                 </div>
                 <div class="col-xs-4">
                         <a href="{{ path('actu_edit', { 'id': actu.id }) }}"><input type="submit" class="btn
-                        btn-success btn-lg"
-                                                                                    value="Editer"></a>
+                                                                            btn-success btn-lg" value="Editer"></a>
                 </div>
                 <div class="col-xs-4">
                     {{ form_start(delete_form) }}
