--- a/m-tourisme/app/Resources/views/layoutAdmin.html.twig
+++ b/m-tourisme/app/Resources/views/layoutAdmin.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseAdmin.html.twig.html.twig' %}
+{% extends 'baseAdmin.html.twig' %}
 
 {% block stylesheets %}
     <!-- include libraries(jQuery, bootstrap) -->
