--- a/m-tourisme/web/css/styleNew.css
+++ b/m-tourisme/web/css/styleNew.css
@@ -1,5 +1,8 @@
 h1 {
+    text-align: center;
     font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+    font-size: 3.5em;
+    padding-left: 100px;
 }
 
 ul {
