update section image

--- a/m-tourisme/web/css/stylesheetSectionImage.css
+++ b/m-tourisme/web/css/stylesheetSectionImage.css
@@ -1,5 +1,5 @@
 .sectionImage {
-	background-image: url(../image/game-image-opaque.jpg);
+	background-image: url(../image/BESTOF31.jpg);
 	background-attachment: fixed;
 	background-size: cover;
 	height: 70%;
