--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -1,5 +1,5 @@
 .sectionImage1 {
-    background-image: url(../image/img_archi/ruelle_paysage_n&b_opacité50_2000x814.jpeg);
+    background-image: url(../image/game-image-opaque.jpg);;
     background-attachment: fixed;
     background-size: cover;
     height: 60vh;
