--- a/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
@@ -3,7 +3,7 @@
         <div class="backgroundHeader" id="ancreHome" >
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xs-hidden col-xs-offset-0
+                    <div class="col-xs-12 col-xs-offset-0
                                 col-sm-4 col-sm-offset-0
                                 col-md-3 col-md-offset-0
                                 col-lg-3 col-lg-offset-1 logo_header">
