Responsive form ok

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
@@ -29,7 +29,7 @@
         {{ form_widget(form.email) }}
             </div>
 
-            <div class="form-group">
+            <div class="form-group input_message">
         {{ form_errors(form.message) }}
         {#{{ form_label(form.message) }}#}
         {{ form_widget(form.message) }}
