mise en forme caroussel

--- a/m-tourisme/web/css/stylesheetListeActu.css
+++ b/m-tourisme/web/css/stylesheetListeActu.css
@@ -60,3 +60,8 @@ p {
     font-family: 'DIN-Light', 'Courgette';
     font-size: 180%;
 }
+
+h1 {
+    font-family: 'DIN-Light', 'Courgette';
+    font-size: 180%;
+}
