--- a/m-tourisme/app/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/app/Resources/views/actu/edit.html.twig
@@ -38,13 +38,13 @@
                         </div>
                         <br/>
                         <div class="col-xs-4">
-                            <div class="alert alert-warning" role="alert">Attention choisir des photos de format carré</div>
+                            <div class="alert alert-warning" role="alert">Attention choisir des photos de format
+                                carré et de taille inférieure à 2Mo</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-4">
-                            <input type="submit"   class="btn btn-success btn-lg
-                            block-center" value="Edit" />
+                            <input type="submit"   class="btn btn-success btn-lg block-center" value="Edit" />
                         </div>
                         {{ form_end(edit_form) }}
                         <div class="col-xs-4">
