--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -27,14 +27,15 @@
                     {% endif %}
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                             <div class="row">
-                                <div class="col-lg-12">
-                                    <h3 class="news">{{ actu.titre | truncate(40, true, '...')}}</h3>
+                                <div class="col-xs-12">
+                                    <h3 class="news">{{ actu.titre | truncate(25, true, '...')}}</h3>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 lens">
                                     <img src="{{ asset('upload/' ~ actu.image) }}" class="imgInLens img-circle center-block" alt="Image d'actu">
-                                    <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
+                                    <a href="{{ path('afficher_actu', {'id': actu.id}) }}"><img src="{{ asset
+                                    ('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille"></a>
                                 </div>
                             </div>
                             <div class="row">
@@ -49,7 +50,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
+                                    <p class="date center-block">{{ actu.date | date("d-m-Y") }}</p><br/>
                                 </div>
                             </div>
                         </div>
