--- a/m-tourisme/web/css/stylesheetActu.css
+++ b/m-tourisme/web/css/stylesheetActu.css
@@ -31,7 +31,8 @@
 .imgInLens {
     position: relative;
     max-width: 35%;
-    margin-top: 6%;
+    margin-top: 10%;
+    margin-left: 30%;
 
 }
 
@@ -64,7 +65,7 @@
 .orange {
     color: #EE6616;
     text-align: center;
-    margin-left: 35%;
+
 }
 
 .orange:hover {
@@ -103,4 +104,14 @@
 .carousel-indicators li {
     border-color: black;
     background-color: #EE6616;
+}
+
+p {
+    text-align: center;
+    font-size: 150%;
+}
+
+h1 {
+    text-align: center;
+    font-size: 150%;
 }
