--- a/m-tourisme/src/AdminBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <p class="connect">Tu es déjà connecté, clique <a class="linkActu" href="actu">ici</a> pour aller sur ton espace d'administration</p>
+                <p class="connect">Tu es connecté, <a class="linkActu" href="actu">clique ici</a> pour aller sur ton espace d'administration</p>
             </div>
         </div>
     </div>
