--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
@@ -1,6 +1,6 @@
 
 <div class="container-fluid">
-    <div class="hidden-xs sectionImage">
+    <div class="hidden-xs hidden-sm sectionImage">
         <div class="row">
             <div class="col-xs-offset-1 col-xs-4">
                 <img class="guillemets" src="{{ asset ('image/guillemets up.png')}}" alt="image guillemets">
