--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -33,25 +33,30 @@
                     {{ form_row(form.contenu, { 'attr': {'class': 'summernote'}}) }}<br/>
                     {{ form_row(form.date) }}<br/>
             <div class="row">
-                <div class="col-xs-8">
-                    {{ form_row(form.image, { 'attr': {'class': ' btn btn-warning block-center'}}) }}<br/>
-                     <input type="submit" class="btn btn-success btn-lg" value="Créer" />
+                <div class="col-xs-8 img">
+                    {{ form_row(form.image, { 'attr': {'class': ' btn btn-warning'}}) }}<br/>
+
                 </div>
                 <div class="col-xs-4">
                     <div class="alert alert-warning" role="alert">Attention choisir des photos de format
                         carré et de taille inférieure à 2Mo</div>
                 </div>
             </div>
-                {{ form_end(form) }}
+
 
 
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-xs-6">
+                            <input type="submit" class="btn btn-success btn-lg" value="Créer" />
+                        </div>
+                        <div class="col-xs-6">
                             <a  class="btn btn-primary btn-lg" href="{{ path('actu_index') }}">Revenir à la liste</a>
                         </div>
                     </div>
+                   <br/>
                 </div>
+        {{ form_end(form) }}
 
         </div>
 <script>
