--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -48,14 +48,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="titreActu">{{ actu.titre }}</h1>
+                        <h1 class="titreActu">{{ actu.titre }}</h1><br/>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
 
                             {# <h2 class="titreActu">Actualité n° {{ actu.id }}</h2> #}
-                            <p class="contenu">{{ actu.contenu | raw}}</p>
+                            <p class="contenu">{{ actu.contenu | raw}}</p><br/>
                             <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive img-actu"><br/>
                             <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
 
