--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -119,7 +119,7 @@
             </div>    
             <div class="row">
                 <div class="col-lg-12">
-                    <a href="http://www.eyrolles.com/Loisirs/Livre/vocabulaire-illustre-de-l-ornement-9782212128598">
+                    <a href="http://www.eyrolles.com/Loisirs/Livre/vocabulaire-illustre-de-l-ornement-9782212128598" target="_blank">
                         <img src="{{ asset('image/produit-vocabulaire.jpg') }}" class="img-responsive" alt="livre vocabulaire illustré de l'Ornement"></a>
                 </div>
             </div>
@@ -132,7 +132,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <a href="http://www.museographie.mazedia.fr/">
+                    <a href="http://www.museographie.mazedia.fr/" target="_blank">
                         <img src="{{ asset('image/produit-mazedia-V2.png') }}" class="img-responsive" alt="Agence Mazedia"></a>
                 </div>
             </div>
@@ -145,7 +145,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <a href="http://www.regioncentre-valdeloire.fr/accueil.html">
+                    <a href="http://www.regioncentre-valdeloire.fr/accueil.html" target="_blank">
                         <img src="{{ asset('image/Region-Centre-Val-de-Loire-2015.png') }}" class="img-responsive" alt="Région centre Val de Loire"></a>
                 </div>
             </div>
