--- a/m-tourisme/web/css/styleEdit.css
+++ b/m-tourisme/web/css/styleEdit.css
@@ -1,14 +1,19 @@
 h1 {
+    text-align: center;
     font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+    font-size: 3.5em;
+    padding-left: 100px;
 }
 
-.form {
+.edit {
     text-align: center;
 }
 
 ul {
     list-style-type: none;
 }
-.image {
-    width: 35%;
+
+
+.img {
+ text-align: left;
 }
