--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetForm.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetFooter.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheet_social_network.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/mTourisme.css')}}">
     {% endblock %}
 
 {% block body %}
