--- a/m-tourisme/web/css/stylesheetSectionImage.css
+++ b/m-tourisme/web/css/stylesheetSectionImage.css
@@ -14,6 +14,7 @@
 	margin: auto;
 	font-size: 450%;
 	color: #000;
+	padding: 0px;
 }
 
 .guillemets {
@@ -37,4 +38,9 @@
 
 .row {
 	margin: 0px;
+}
+
+.container-fluid {
+	padding-right: 0px;
+	padding-left: 0px;
 }
