--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -97,14 +97,14 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-lg-5 col-md-5 col-sm-5 hidden-xs FacebookGeo">
+        <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-lg-4 col-md-4 col-sm-4 hidden-xs">
             <div class="fb-page" data-href="https://www.facebook.com/geomotifs" data-tabs="timeline,events,messages"
                  data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false"
                  data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook
                  .com/geomotifs" class="fb-xfbml-parse-ignore "><a href="https://www.facebook.com/geomotifs">Géomotifs</a></blockquote>
             </div>
         </div>
-        <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
+        <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-4">
         </div>
     </div>
     <hr class="separe">
