--- a/m-tourisme/app/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/app/Resources/views/actu/edit.html.twig
@@ -43,12 +43,12 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-4">
-                            <input type="submit"   class="btn btn-success btn-lg block-center" value="Edit" />
+                            <input type="submit"   class="btn btn-success btn-lg block-center" value="Editer" />
                         </div>
                         {{ form_end(edit_form) }}
                         <div class="col-xs-4">
                             {{ form_start(delete_form) }}
-                            <input type="submit" class="btn btn-danger btn-lg" value="Delete">
+                            <input type="submit" class="btn btn-danger btn-lg" value="Supprimer">
                             {{ form_end(delete_form) }}
                         </div>
                         <div class="col-xs-4">
