--- a/m-tourisme/app/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/app/Resources/views/actu/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layoutEmail.html.twig' %}
+{% extends 'layoutAdmin.html.twig' %}
 {% block stylesheets %}
     <!-- Bootstrap -->
     <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
