--- a/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
@@ -22,7 +22,7 @@
 
                 <!-- Logo Lab'O  -->
                 <div class="col-lg-4 col-xs-12">
-                    <a href="http://www.le-lab-o.fr/" target="_blank"><img src="{{ asset ('image/labO_logo_vect.png')}}" class="img-responsive logolabo" alt="logo Le Lab'O"></a>
+                    <a href="http://www.le-lab-o.fr/" target="_blank"><img src="{{ asset ('image/labO_logo_vect2.png')}}" class="img-responsive logolabo" alt="logo Le Lab'O"></a>
                 </div>
 
             </div>
