--- a/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
@@ -1,5 +1,5 @@
 <header>
-    <a href="index" class="lien_header">
+    <a href="{{ path('accueil') }}" class="lien_header">
         <div class="backgroundHeader" id="ancreHome" >
             <div class="container-fluid">
                 <div class="row">
