--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -3,7 +3,19 @@
         <div class="col-lg-12">
             <h2 id="ancreActu" class="titreActu">Actualités</h2>
         </div>
+
+        <div class="col-lg-2 col-lg-offset-10 goToList_div">
+        <a class="goToList" href="listeactu">Voir toutes nos actualités</a>
+        </div>
     </div>
+
+    {#<!-- lien vers la iste des actus -->#}
+    {#<div class="row">#}
+        {#<div class="col-lg-2 col-lg-offset-10">#}
+            {#<a class="goToList" href="listeactu">Voir toutes nos actualités</a>#}
+        {#</div>#}
+    {#</div>#}
+
 
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -76,10 +88,5 @@
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <a class="goToList" href="listeactu">Voir toutes nos actualités</a>
-        </div>
     </div>
 </div>
