--- a/m-tourisme/web/css/styleEdit.css
+++ b/m-tourisme/web/css/styleEdit.css
@@ -2,7 +2,6 @@ h1 {
     text-align: center;
     font-family: 'santorregular', 'DIN-Bold', 'Courgette';
     font-size: 3.5em;
-    padding-left: 100px;
 }
 
 .edit {
@@ -16,4 +15,8 @@ ul {
 
 .img {
  text-align: left;
+}
+
+.contenu {
+    text-align: left;
 }
