--- a/m-tourisme/web/css/styleNew.css
+++ b/m-tourisme/web/css/styleNew.css
@@ -2,7 +2,6 @@ h1 {
     text-align: center;
     font-family: 'santorregular', 'DIN-Bold', 'Courgette';
     font-size: 3.5em;
-    padding-left: 100px;
 }
 
 ul {
@@ -14,5 +13,9 @@ ul {
 }
 
 .img {
+    text-align: left;
+}
+
+.contenu {
     text-align: left;
 }
