--- a/m-tourisme/web/css/stylesheetActu.css
+++ b/m-tourisme/web/css/stylesheetActu.css
@@ -53,6 +53,7 @@
 }
 
 .txtActu {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin-top: 20%;
     text-align: center;
     font-size: 150%;
@@ -109,6 +110,7 @@
 p {
     text-align: center;
     font-size: 150%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 {
