--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -29,7 +29,7 @@
                             <a href="{{ path('afficher_actu', {'id': actu.id}) }}"><img src="{{ asset('upload/' ~ actu.image) }}"
                                                                                         class="img-responsive img-actu"></a><br/>
                             <a href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a><br/>
-                            <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
+                            <p class="date">Le {{ actu.date | date("d-m-Y") }}</p><br/>
                             <hr class="separation">
                         {% endfor %}
                     </div>
