--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -4,7 +4,7 @@
         <!-- Bootstrap -->
         <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
         <!-- CSS Perso -->
-        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetListeActu.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetOneActu.css')}}">
         <link rel="stylesheet" type="text/css" href="{{ asset('css/stylesheetHeader.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetFooter.css')}}">
         <!-- Fonts -->
@@ -26,7 +26,7 @@
                             {# <h2 class="titreActu">Actualité n° {{ actu.id }}</h2> #}
                             <p class="contenu">{{ actu.contenu | raw}}</p><br/>
                             <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive img-actu"><br/>
-                            <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
+                            <p class="date">Le  {{ actu.date | date("d-m-Y") }}</p><br/>
 
                     </div>
                 </div>
