center title new actu in admin & doc2

--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -25,7 +25,7 @@
     <div class="container new">
 
 
-            <h1>Création d'une actualité</h1>
+            <h1 class="new_actu_title">Création d'une actualité</h1>
 
                 {{ form_start(form) }}
 
