--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -2,9 +2,20 @@
     <div class="row">
         <div class="col-lg-12">
             <h2 id="ancreActu" class="titreActu">Actualités</h2>
-            <a class="goToList" href="listeactu">Voir toutes nos actualités</a>
+        </div>
+
+        <div class="col-lg-3 col-lg-offset-9 goToList_div">
+        <a class="goToList" href="listeactu">Voir toutes nos actualités</a>
         </div>
     </div>
+
+    {#<!-- lien vers la iste des actus -->#}
+    {#<div class="row">#}
+        {#<div class="col-lg-2 col-lg-offset-10">#}
+            {#<a class="goToList" href="listeactu">Voir toutes nos actualités</a>#}
+        {#</div>#}
+    {#</div>#}
+
 
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
